--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-tooltip": "^3.3.0",
     "underscore": "^1.8.3"
   },
+  "homepage" : "http://cgfive.github.io/gwent-draft-simulator/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
